test/fail/errors/ClashingFileNamesFor.agda
-- There are several files which match an imported module. Run with -ierrors
-- and -ierrors/Imports (see ClashingFileNamesFor.flags).
module ClashingFileNamesFor where

import ShouldBePi

